Fixed incorrect/missing margins for headings and paragraphs

--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -32,6 +32,7 @@ h1 {
   font-family: $font--sans;
   font-size: 2em;
   font-weight: 500;
+  margin: 0 0 1em;
 }
 
 h2 {
@@ -43,6 +44,7 @@ h2 {
 p {
     font-size: 0.875em;
     font-weight: 300;
+    margin: 0 0 1em;
 
     &.inline {
       display: inline-block;
